CHANGES IN VERSION 0.99.7
-------------------------

CHANGES IN VERSION 0.99.6
-------------------------

FEATURES
     o summary() for NormRFit instances shows now percentage of bins at each
       significance level
     o getEnrichment() takes argument for computing a non-standardized
       enrichment

PERFORMANCE
     o SIMD optimization for OpenMP >= ver4

CHANGES IN VERSION 0.99.5
-------------------------

FEATURES
     o summary() for NormRFit instances of types "diffR" and "regimeR" now
       shows componentwise test results

BUGFIXES
     o Removing MAKEFLAG "-D_GLIBCXX_PARALLEL" because it is experimental

CHANGES IN VERSION 0.99.4
-------------------------

BUGFIXES
     o Removing PKG_CPPFLAGS and PKG_LIBS variables from src/Makevars

CHANGES IN VERSION 0.99.3
-------------------------

BUGFIXES
     o Fixing imports in roxygen2

CHANGES IN VERSION 0.99.2
-------------------------

FEATURES
     o Vignette finished
     o Documentation for NormRFit-class & NormRCountConfig-class updated

BUGFIXES
     o deploy.log removed

CHANGES IN VERSION 0.99.1
-------------------------

FEATURES
     o  Added examples for normr-methods, BamCountConfig-class & NormRFit-class
     o  Moved all documentation to one manpage (normr.Rd)
     o  Vignette: knitr-based vignette for normr finished
     o  exportR(): Export NormRFit objects to bed, bedGraph and bigWig
     o  plot(): Produce a small diagnostic plot for NormRFit objects
     o  diffR(): Intersection of results for switched labels increases
        specificity

BUGFIXES
     o  Removed deploy.log
     o  Fixed build errors and warnings
     o  Fixed failing test


CHANGES IN VERSION 0.99.0
-------------------------

FEATURES

     o  huge performance speedup by data compression to unique tupels only
     o  Kahan summation for log posterior summation to reduce numerical error
     o  Standardized enrichment computation in C++. This enrichment can be well
        compared between various ChIP-seq experiments