@@ -1,6 +1,12 @@
 CHANGES IN VERSION 0.99.7
 -------------------------
 
+BUGFIXES
+     o Binning "genome" now reports correct genomic coordinates
+        enrichR,character,character,data.frame-method
+        diffR,character,character,data.frame-method
+        regimeR,character,character,data.frame-method
+
 CHANGES IN VERSION 0.99.6
 -------------------------
 
